@@ -16,3 +16,7 @@
 [[Example|text]]9
 
 [[Comments:Example]]9
+
+[[#Section]]
+
+[[#Section|text]]
